--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -1,4 +1,15 @@
 .contentContainer {
-  /* padding: 2em; */
-  clip-path: rect(10px, 20px, 30px, 40px);
+  position: absolute;
+  top: 0;
+  z-index: -1;
+}
+
+.wrapper {
+  position: relative;
+}
+
+.navbar {
+  position: absolute;
+  top: 0;
+  z-index: 1;
 }
