--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -4,6 +4,7 @@
   flex-direction: row;
   align-items: center;
   height: 5rem;
+  background-color: transparent;
 }
 
 .navlink {
@@ -25,7 +26,4 @@
   font-weight: bold;
   margin: auto 2rem;
   padding: 0.625rem 0em;
-}
-
-.menuIcon {
 }
