Adding sidebar and fixing links

--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  overflow: hidden;
 }
 
 .heroContent {
@@ -32,6 +33,7 @@
 .caption {
   text-align: center;
   font-weight: 200;
+  margin: 1em 2em;
 }
 
 @keyframes arrowAnimation {
@@ -54,6 +56,6 @@
   position: absolute;
   z-index: -1;
   top: 0;
-  /* width: 100vw; */
+  /* max-width: 100vw; */
   height: 100vh;
 }
