Adding media queries for larger viewports

--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -8,6 +8,7 @@
   margin: 0;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
 }
 
 .link {
@@ -18,6 +19,8 @@
   box-sizing: border-box;
   margin: 1em;
   transition: ease-in-out 0.25s;
+  display: flex;
+  justify-content: center;
 }
 
 .link:hover {
@@ -42,6 +45,7 @@
   text-align: center;
   margin-top: 0px;
   padding-top: 2em;
+  margin-bottom: 2em;
 }
 
 .title::after {
