--- a/src/components/Experience/ExperienceCard/experiencecard.module.css
+++ b/src/components/Experience/ExperienceCard/experiencecard.module.css
@@ -39,3 +39,14 @@
   margin: 0px 0px 3px 0px;
   font-weight: 400;
 }
+
+/* iPad */
+@media (min-width: 768px) {
+  .experienceWrapper {
+    flex-direction: row;
+  }
+
+  .experienceText {
+    margin-left: 2em;
+  }
+}
