--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,15 +1,14 @@
 .navbar {
   width: 100vw;
+  position: fixed;
+  top: 0;
+  z-index: 3;
   display: flex;
   flex-direction: row;
   align-items: center;
-  height: 5rem;
-  background-color: transparent;
-}
-
-.navlink {
-  padding: 0 1em;
-  margin: 0.635em 1em;
+  height: 4rem;
+  background-color: white;
+  font-weight: 200;
 }
 
 .navlinksContainer {
@@ -24,15 +23,28 @@
 .logoName {
   flex-basis: 100%;
   font-weight: bold;
-  margin: auto 2rem;
   padding: 0.625rem 0em;
+  margin: auto 2em;
 }
 
 .navlink {
   color: black;
   text-decoration: none;
+  padding: 0 1em;
+  margin: 0.635em 1em;
 }
 
 .navlink:hover {
   text-decoration: underline;
+}
+
+/* iPad */
+@media (min-width: 768px) {
+  .logoName {
+    margin: auto 3em;
+  }
+
+  .navlinksContainer {
+    margin: auto 3em;
+  }
 }
