--- a/src/components/Work/ProjectCard/projectcard.module.css
+++ b/src/components/Work/ProjectCard/projectcard.module.css
@@ -1,36 +1,42 @@
 .card {
   position: relative;
-  width: 100%;
-  color: white;
-  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  border: 1px solid rgb(224, 224, 224);
+  border-radius: 1em;
+  -webkit-box-shadow: 1px 1px 20px 0px rgba(50, 50, 50, 0.4);
+  -moz-box-shadow: 1px 1px 20px 0px rgba(50, 50, 50, 0.4);
+  box-shadow: 1px 1px 10px 0px rgba(50, 50, 50, 0.2);
+  margin-bottom: 1em;
+  font-weight: 200;
 }
 
 .image {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  z-index: -1;
+  width: 100%;
+  border-radius: 1em;
+  margin-bottom: 1em;
+  box-shadow: 1px 1px 10px 0px rgba(50, 50, 50, 0.2);
+  max-height: 10em;
 }
 
-.projectTitleWrapper {
-  height: 7em;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.3);
-  transition: all 0.35s ease-in-out;
-  color: white;
-  text-decoration: none;
-}
-
-.projectTitleWrapper:hover {
-  background-color: rgba(0, 0, 0, 0);
-  color: rgba(0, 0, 0, 0);
+.projectInfoText {
+  margin: 1em 0em;
 }
 
 .link {
   text-decoration: none;
+}
+
+.workButton {
+  display: inline-block;
+  background-color: #2f81e0;
+  text-decoration: none;
+  border: none;
+  font-size: 1em;
+  color: white;
+  padding: 0.5em 1em;
+  margin: 0em 0.5em 0em 0em;
+  border-radius: 1em;
+  font-weight: 300;
 }
