Hotfix for gatsby-image-wrapper

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,3 +6,9 @@ body {
   margin: 0;
   padding: 0;
 }
+
+/* HOTFIX for rounded corners on safari*/
+.gatsby-image-wrapper {
+  position: relative;
+  z-index: 0;
+}
